hphp/test/zend/good/tests/classes/this.php.expectf
Fatal error: You cannot use this syntax on the left-hand side of an assignment. in %s/this.php on line 11
